# safeshared

./: CMakeLists.txt  GenerateProjectFiles.bat
.github/workflows/: cicd.yml
include/safeshared/: rwlock.h
test/: CMakeLists.txt  rwlock_test.cpp
